# FaceLivenessDetection-SDK

./: .gitignore  .gitmodules  AWS.md  CONTAINER.md  Dependencies.md  GPGPU.md  README.md
binaries/linux/x86_64/: benchmark  libturbojpeg.so.0  libz.so.1  liveness  python_liveness.sh  runtimeKey
binaries/windows/x86_64/: FaceLivenessDetectionSDK.lib  benchmark.bat  liveness.bat  python_deepfake.bat  python_liveness.bat
cpp/: FLD-SDK-API-PUBLIC.h
csharp/: FLD-SDK-API-PUBLIC-SWIG_cscharp.cxx  FLD_SDK_IMAGE_TYPE.cs  FaceLivenessDetectionSDK.cs  FaceLivenessDetectionSDKPINVOKE.cs  FldSdkEngine.cs  FldSdkParallelDeliveryCallback.cs  FldSdkResult.cs
java/: java.i  java_android.i
java/org/doubango/FaceLivenessDetection/Sdk/: FLD-SDK-API-PUBLIC-SWIG_java.cxx  (+6 more)
perl/: FLD-SDK-API-PUBLIC-SWIG_perl.cxx  FaceLivenessDetectionSDK.pm
python/: FLD-SDK-API-PUBLIC-SWIG_python.cxx  FLD-SDK-API-PUBLIC-SWIG_python.h  FaceLivenessDetectionSDK.py  README.md  python.i  setup.py
ruby/: FLD-SDK-API-PUBLIC-SWIG_ruby.cxx  FLD-SDK-API-PUBLIC-SWIG_ruby.h
samples/: CMakeLists.txt  README.md
samples/cpp/: CMakeLists.txt  README.md  fld_image_utils.h
samples/cpp/benchmark/: CMakeLists.txt  README.md  benchmark.cxx  benchmark.vcxproj  benchmark.vcxproj.filters  cmakegen.bat
samples/cpp/liveness/: CMakeLists.txt  README.md  liveness.cxx  liveness.vcxproj  liveness.vcxproj.filters
samples/cpp/runtimeKey/: CMakeLists.txt  README.md  runtimeKey.cxx  runtimeKey.vcxproj
samples/csharp/: README.md
samples/csharp/liveness/: Program.cs  README.md  liveness.csproj
samples/csharp/liveness/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
samples/csharp/liveness/Resources/: LivenessProjectDir.txt
samples/java/: README.md
samples/java/liveness/: Liveness.bat  Liveness.java  README.md  sources.txt
samples/python/: README.md
samples/python/deepfake/: README.md  deepfake.py
samples/python/liveness/: README.md  liveness.py
(+6 files in other folders)
